# CCTV-Recording

./: .gitignore  .python-version  Dockerfile  cctv-cron  delete_old_cctv.sh  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yml
cctv_recording/: create_dirs_cctv.py  main.py
cctv_recording/utils/: config.py  example_config.json
